# quantum-computing-python-samples

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: advanced_workflow_zh.md  bb84_protocol_zh.md  example_walkthrough_zh.md  glossary_zh.md  grover_algorithm_zh.md  learning_guide_zh.md  post_quantum_cryptography_zh.md  quantum_computing_intro_course_zh.md  quantum_ctf_zh.md  quantum_paradoxes_zh.md  quickstart_zh.md  shor_algorithm_zh.md  shor_grover_speedup_zh.md
examples/: 01_superposition.py  02_bell_entanglement.py  03_superdense_coding.py  04_teleportation.py  05_deutsch_jozsa.py  06_grover_search.py  07_phase_estimation.py  08_vqe.py  09_advanced_workflow.py
src/quantum_samples/: __init__.py  advanced_workflow.py  cli.py  common.py  demos.py
tests/: test_samples.py
