[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "quantum-computing-python-samples"
version = "0.1.0"
description = "Python Qiskit samples for learning common quantum computing concepts and workflows."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "MIT"
authors = [
  { name = "Codex" }
]
dependencies = [
  "numpy>=1.26",
  "qiskit>=2.4,<3",
  "qiskit-aer>=0.17,<0.18",
  "scipy>=1.11"
]

[project.optional-dependencies]
dev = [
  "pytest>=8"
]

[project.scripts]
quantum-samples = "quantum_samples.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/quantum_samples"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
